# zpm

./: .editorconfig  .gitignore  .huskyrc.js  .npmignore  .package.yml  .prettierrc  .travis.yml  CHANGELOG.md  LICENSE.md  commitlint.config.js  config.yml  jest.config.js  package.json  prettier.config.js  tsconfig.dist.json  tsconfig.json  tslint.json  wallaby.js  webpack.config.js
builder/default/: ZPM.cmake
default/: package.json  package.yml
extractor/: extractor.v1.json
extractor/default/: extract.ts
extractors/: extractor.v1.json
extractors/default/: .package.yml  extract.ts
manifest/: extractors.yml  libraries.yml
monorepo/googletest/: .package.yml  CMakeLists.txt
monorepo/googletest/test/: .package.yml  CMakeLists.txt  cmake_install.cmake  main.cpp  unit_tests.cpp
registry/: builder.json  extractor.jsonf  extractors.yml  libraries.yml
sandbox/: .package.yml
sandbox/sandbox2/: .package.yml
src/: main.ts  zpm.ts
src/api/: fs.d.ts  fs.ts  git.d.ts  git.ts  log.d.ts  package.d.ts  package.ts  platform.ts  shell.ts
src/builder/: builder.ts  cmakebuilder.ts  extract.ts  extractor.ts  gitBuilder.ts  lock.ts  packageBuilder.ts  pathBuilder.ts  rootBuilder.ts
src/cli/: inquiries.ts  program.ts  spinner.ts
src/common/: async.ts  config.ts  environment.ts  git.ts  io.ts  lock.ts  logger.ts  range.spec.ts  range.ts  storage.ts  util.ts  validation.ts  version.spec.ts  version.ts
tools/: generate-types.ts
typings/: appdirectory.d.ts  await-spawn.d.ts  cli-spinners.d.ts  deeply.d.ts  logic-solver.d.ts  multispinner.d.ts  ora.d.ts
(+72 files in other folders)
